This file documents the revision history for the Monitoring Webinterface Thruk.

1.60     not yet released
          - added http backend type which connects to another thruk instance
          - config tool:
            - changed source editor to linedtextarea because of IE compatibility
          - logcache:
            - renamed logcache cli commands
            - changed mongodb logcache to seperate collection per backend
            - added cli command logcachestats to display logcache statistics
            - added cli command logcacheauthupdate to update authorization information
            - fixed mongodb logcache authorization
          - Bug Fixes
            - fixed connection test for new backends
            - retain order of backends when not using sections
            - fixed deselecting unavailable backends
            - fixed jumping cursor in search input in IE

1.58     Wed Nov 21 12:51:29 CET 2012
          - use regex matching in search preview too
          - added new config option first_day_of_week
          - added column filter in configuration page (Thibault Cohen)
          - faster and more useably mouseover in host/service lists
          - added configuration only backends
          - show link to hostdetails when no services match
          - added filter by number of services
          - added config option to select default quick command
          - added excel export for problems page
          - added json export for problems page
          - config tool:
            - preserve inline comments if possible
            - added enable/disable actions
            - show forward references on ref page too
            - fix computed config display of additive inheritance
            - fix ignoring changes to readonly pattern in config
            - fix auto submit when pressing some wizards
          - Bug Fixes
            - fixed sending commands to all backends
            - usability improvements for Internet Explorer