@@ -1731,6 +1731,19 @@ ex.:
   connection_pool_size = 0
 
 
+==== sitepanel
+The sitepanel is used to display multiple backends/sites at a glance.
+With than 10 or more sites, the list of backends will be combined
+into the combined site panel which just displays the totals of
+available / down / disabled sites.
+Set sitepanel to list/compact/auto/off to change the default
+behaviour.
+
+ex.:
+
+  sitepanel = auto
+
+
 ==== Component Thruk::Backend
 Enter your backend connection settings here. At the moment only
 livestatus is supported. The port is the port from the
