@@ -22,3 +22,7 @@ body {
   margin: 0px;
   margin-left: 183px;
 }
+
+DIV#site_panel {
+  left: 195px;
+}
