@@ -454,6 +454,13 @@ cookie_auth_session_cache_timeout = 5
 # when accessing logfiles, for example when creating reports.
 #logcache=hostname:port/thruk_log_cache
 
+# The sitepanel is used to display multiple backends/sites at a glance.
+# With than 10 or more sites, the list of backends will be combined
+# into the combined site panel which just displays the totals of
+# available / down / disabled sites.
+# Set sitepanel to list/compact/auto/off to change the default behaviour.
+#sitepanel=auto
+
 ######################################
 # Backend Configuration, enter your backends here
 <Component Thruk::Backend>
